@@ -9,6 +9,8 @@ import java.util.Spliterator;
  * <b>NOTE:</b> You must call {@link CloseableSpliterator#close()} method when you are done otherwise the underlying SQL
  * statement and connection may be kept open.
  * </p>
+ * 
+ * @author zhemaituk
  */
 public interface CloseableSpliterator<T> extends Spliterator<T>, AutoCloseable {
 
@@ -16,5 +18,4 @@ public interface CloseableSpliterator<T> extends Spliterator<T>, AutoCloseable {
 	 * Close any underlying SQL statements but swallow any SQLExceptions.
 	 */
 	public void closeQuietly();
-
 }
